bug: dialogs are not centered by default (#2256)

--- a/ui/user/src/app.css
+++ b/ui/user/src/app.css
@@ -121,6 +121,7 @@
 		font-size: 0.875rem; /* text-sm */
 		color: black;
 		box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1); /* shadow-lg */
+		margin: auto;
 		.dark & {
 			background-color: var(--surface2);
 			color: white;
